--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 datasets/2020/*
+datasets/2020_old/*
+datasets/2019/*
+datasets/2018/*
+datasets/2017/*
+datasets/2016/*
+datasets/2015/*
+datasets/2014/*
+datasets/2013/*
+datasets/base_comb/*
 .vscode/*
 
